sandbox/output
OneHundredDoors.java:14: error: incompatible types: Object[] cannot be converted to DS[]
            return doorStates.subList(1, 2).toArray();
                                                   ^
1 error
